--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   --yellow: #ffc200;
   --black: #131415;
   --grey: #2d3640;
-  --bg-img: url(/week_6/day_2/proyec_1/assets/img/re.jpg);
+  --bg-img: url(../img/re.jpg);
 }
 
 * {
